# codeanalyzer

./: AUTHORS  Makefile.am  README.md  autogen.sh  configure.ac  release.sh
m4/: bfd.m4
po/: LINGUAS  POTFILES.in  de.po  en.po  missing
src/: FileParser.cc  FileParser.hpp  Makefile.am  codeanalyzer.glade  codeanalyzer.ui  main.cc  slice.h  windres.rc  windres.rc.in
src/baobab/: baobab-chart.c  baobab-ringschart.c
windows/: build.bat  codeanalyzer.wxs  license.rtf
